# vncaa

./: .gitignore  .pre-commit-config.yaml  .semgrep.yml  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.omnibus  Makefile  README.md  agent-wrapper.sh  alacritty.toml  docker-compose.yml  entrypoint.sh  run.sh
.claude/: settings.local.json
.github/: dependabot.yml
.github/workflows/: ci.yml  docker-build-push-amd64.yml  docker-build-push-arm64.yml  docker-build-push.yml  release.yml  test.yml
scripts/: agent-wrapper.sh  debug-agent-launcher.sh  entrypoint.sh  provision-workspace.sh
scripts/olivetin/: README.md  config.yaml  ssh_authorized_keys_entry  start_vncaa  stop_vncaa  vncaa_command_wrapper
src/: index.html  main.rs
static/: site.webmanifest
systemd/user/: vncaa.service
